welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: type mismatch;
 found   : Any
 required: plm.universe.Direction
    setDirection(pos)
                 ^